add style to the first paragraph

--- a/Tutorial.html
+++ b/Tutorial.html
@@ -9,16 +9,21 @@
 <body>
 <div class="container">
     <div class="html_tutorial">
-        <h2>What is HTML?</h2>
-        <p>Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web applications.</p>
-        <p>Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages.
-            HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
-        <p>HTML elements are the building blocks of HTML pages. With HTML constructs, images and other objects such as interactive forms may be
-            embedded into the rendered page. HTML provides a means to create structured documents by denoting structural semantics for text
-            such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets.
-            Tags such as <img /> and <input /> directly introduce content into the page. Other tags such as <p> surround and provide information
-        about document text and may include other tags as sub-elements. Browsers do not display the HTML tags, but use them to interpret
-        the content of the page.</p>
+        <div class="what_is_html">
+            <h2>What is HTML?</h2>
+            <p><b>Hypertext Markup Language (<span class="term">HTML</span>)</b> is the standard markup language for creating web pages and web applications.</p>
+            <p>Web browsers receive <span class="term">HTML</span> documents from a web server or from local storage and render the documents into
+                multimedia web pages. <span class="term">HTML</span> describes the structure of a web page semantically and originally included cues
+                for the appearance of the document.</p>
+            <p><span class="term">HTML</span> elements are the building blocks of <span class="term">HTML</span> pages. With <span class="term">HTML</span>
+                constructs, images and other objects such as interactive forms may be embedded into the rendered page. <span class="term">HTML</span>
+                provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links,
+                quotes and other items.<span class="term">HTML</span> elements are delineated by tags, written using angle brackets. Tags such
+                as <code>&lt;img/&gt;</code> and <code>&lt;input/&gt;</code> directly introduce content into the page. Other tags such
+                as <code>&lt;p&gt;</code> surround and provide information about document text and may include other tags as sub-elements.
+                Browsers do not display the <span class="term">HTML</span> tags, but use them to interpret the content of the page.</p>
+        </div>
+
     </div>
 </div>
 </body>
