--- a/Tutorial.html
+++ b/Tutorial.html
@@ -41,6 +41,17 @@
         
             </p>
         </div>
+        <div>
+            <p>
+                <pre class="content"></pre>
+            </p>
+        </div>
+
+        <div>
+            <p>
+                <strong></strong> 
+            </p>
+        </div>
     </header>
 </body>
 </html>
