--- a/markup.html
+++ b/markup.html
@@ -3,12 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Markup</title>
+    <title>Tutorial HTML</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h2>Markup</h2>
+<div class="container">
+    <div class="html_tutorial">
+    <div class="markup">
+	<h2>Markup</h2>
     <p>HTML markup consists of several key components, including those called tags (and their attributes), character-based data types, character references and entity references. HTML tags most commonly come in pairs like <h1> and </h1>, although some represent empty elements and so are unpaired, for example <img>. The first tag in such a pair is the start tag, and the second is the end tag (they are also called opening tags and closing tags).</p>
     <p>Another important component is the HTML document type declaration, which triggers standards mode rendering.</p>
     <p>The following is an example of the classic "Hello, World!" program:</p>
+	</div>
+    </div>
+</div>
+</body>
 </html>
