--- a/markup.html
+++ b/markup.html
@@ -11,11 +11,11 @@
     <div class="html_tutorial">
     <div class="markup">
 	<h2>Markup</h2>
-    <p>HTML markup consists of several key components, including those called tags (and their attributes), character-based data types, character references and entity references. HTML tags most commonly come in pairs like <h1> and </h1>, although some represent empty elements and so are unpaired, for example <img>. The first tag in such a pair is the start tag, and the second is the end tag (they are also called opening tags and closing tags).</p>
-    <p>Another important component is the HTML document type declaration, which triggers standards mode rendering.</p>
+    <p><span class="highlight-html">HTML</span> markup consists of several key components, including those called tags (and their <em>attributes</em>), character-based <em>data types, character</em> and <em>entity references</em>. <span class="highlight-html">HTML</span> tags most commonly come in pairs like <code>&lt;h1&gt;</code> and <code>&lt;/h1&gt;</code>, although some represent empty elements and so are unpaired, for example <code>&lt;img/&gt;</code>. The first tag in such a pair is the start tag, and the second is the end tag (they are also called <em>opening tags</em> and <em>closing tags</em>).</p>
+    <p>Another important component is the <span class="highlight-html">HTML</span> <em>document type declaration</em>, which triggers standards mode rendering.</p>
     <p>The following is an example of the classic "Hello, World!" program:</p>
 	</div>
-    </div>
-</div>
 </body>
 </html>
+
+<code>&lt;img/&gt;</code>
