--- a/Tutorial.html
+++ b/Tutorial.html
@@ -38,7 +38,17 @@
         <p>The following is an example of the classic "Hello, World!" program:</p>
 
         <div>
-            <pre class="content"></pre>
+            <pre class="content">
+                &lt !DOCTYPE html &gt
+                &lt html &gt
+                &lt head &gt
+                &lt title &gt This is a title &lt /title &gt
+                &lt /head &lt
+                &lt body &lt
+                &lt p &gt Hello world!&lt /p &gt
+                &lt /body &gt
+                &lt/html>&gt
+            </pre>
         </div>
 
     </div>
