--- a/Tutorial.html
+++ b/Tutorial.html
@@ -41,12 +41,12 @@
             <pre class="content">
                 &lt !DOCTYPE html &gt
                 &lt html &gt
-                &lt head &gt
-                &lt title &gt This is a title &lt /title &gt
-                &lt /head &lt
-                &lt body &lt
-                &lt p &gt Hello world!&lt /p &gt
-                &lt /body &gt
+                    &lt head &gt
+                         &lt title &gt This is a title &lt /title &gt
+                    &lt /head &lt
+                    &lt body &lt
+                        &lt p &gt Hello world!&lt /p &gt
+                    &lt /body &gt
                 &lt/html>&gt
             </pre>
         </div>
@@ -55,7 +55,7 @@
 
     <div>
         <p>
-            <strong></strong>
+            <strong>Tags:</strong> <span class="container">CodingScripting</span> <span class="container">head</span> <span class="container">HTML</span>  <span class="container">Introduction to HTML</span>  <span class="container">Landing</span> <span class="container">Links semantics</span> <span class="container">Structure</span> <span class="container">Text</span>
         </p>
     </div>
 </div>
