--- a/Tutorial.html
+++ b/Tutorial.html
@@ -43,11 +43,11 @@
                 &lt html &gt
                     &lt head &gt
                          &lt title &gt This is a title &lt /title &gt
-                    &lt /head &lt
-                    &lt body &lt
+                    &lt /head &gt
+                    &lt body &gt
                         &lt p &gt Hello world!&lt /p &gt
                     &lt /body &gt
-                &lt/html>&gt
+                &lt/html&gt
             </pre>
         </div>
 
