--- a/Tutorial.html
+++ b/Tutorial.html
@@ -37,25 +37,27 @@
         <p>Another important component is the <span class="term">HTML</span> <em>document type declaration</em>, which triggers standards mode rendering.</p>
         <p>The following is an example of the classic "Hello, World!" program:</p>
 
-        <div>
+        <div class="cod-wrapper">
             <pre class="content">
-                &lt !DOCTYPE html &gt
-                &lt html &gt
-                    &lt head &gt
-                         &lt title &gt This is a title &lt /title &gt
-                    &lt /head &gt
-                    &lt body &gt
-                        &lt p &gt Hello world!&lt /p &gt
-                    &lt /body &gt
+                &lt!DOCTYPE html&gt
+                &lthtml&gt
+                    &lthead&gt
+                         &lttitle&gt<span>This is a title</span>&lt/title&gt
+                    &lt/head&gt
+                    &ltbody&gt
+                        &ltp&gt<span>Hello world!</span>&lt/p&gt
+                    &lt/body&gt
                 &lt/html&gt
             </pre>
         </div>
-
     </div>
 
-    <div>
+    <div class="tags">
         <p>
-            <strong>Tags:</strong> <span class="container">CodingScripting</span> <span class="container">head</span> <span class="container">HTML</span>  <span class="container">Introduction to HTML</span>  <span class="container">Landing</span> <span class="container">Links semantics</span> <span class="container">Structure</span> <span class="container">Text</span>
+            <strong>Tags:</strong> <span class="item">CodingScripting</span> <span class="item">head</span>
+            <span class="item">HTML</span>  <span class="item">Introduction to HTML</span>
+            <span class="item">Landing</span> <span class="item">Links semantics</span>
+            <span class="item">Structure</span> <span class="item">Text</span>
         </p>
     </div>
 </div>
